fix: -tag dropdown always go down even if out of screen -image border, image centering, optimal image size. Fixed height, variable width

--- a/panoptic_front/src/assets/main.css
+++ b/panoptic_front/src/assets/main.css
@@ -1,4 +1,8 @@
-.menu{
+:root {
+  --border-color: rgb(195, 207, 217)
+}
+
+.menu {
   font-size: 13px;
   height: 100vh;
   position: sticky;
@@ -10,12 +14,13 @@
   font-size: 13px;
 }
 
-.menu h3,.menu .h3 {
+.menu h3,
+.menu .h3 {
   font-size: 1.1rem;
   margin-left: 1rem;
 }
 
-.clickable:hover{
+.clickable:hover {
   cursor: pointer;
 }
 
@@ -77,7 +82,7 @@ body {
 
 .property-item {
   padding: 5px;
-  border-top: 1px solid rgb(195, 207, 217);
+  border-top: 1px solid var(--border-color);
 }
 
 .custom-hr {
